<ul>
	<li>V1.0.0
  	<ul>
                <li>2003-10-07 DP - Handle array of definable length types correctly e.g. numeric(12,8)[].
                <li>2003-10-07 DP - Display/use char instead of bpchar.
                <li>2003-10-07 AP - Fixed the frogfrog constraint (doubling of names).
                <li>2003-10-06 AP - Check if PQfnumber wants quoting or not
                <li>2003-10-06 AP - Fix Unique Constraint creation
                <li>2003-10-06 AP - Fix DlgUnit sizing, review of XRC files
                <li>2003-10-03 DP - When connecting to a new server, if logon fails remember description as well as other info.
		<li>2003-10-03 DP - Added locks tab to server status window.
		<li>2003-10-03 DP - Reconnect to databases properly after failed attempt to drop.
		<li>2003-10-02 DP - Re-enable the query builder.
                <li>2003-10-01 AP - generic TreeItem renderer for gtk [+] / [-]
                <li>2003-10-01 AP - client encoding SQL_ASCII for server SQL_ASCII
		<li>2003-10-01 DP - Correctly quote table names when creating indexes.
                <li>2003-10-01 AP - fonts determine metrics for dialog resizing
		<li>2003-09-30 HS - Display new triggers correctly in the treeview.
		<li>2003-09-30 DP - Allow creation of triggers with functions in schemas not in the search path.
		<li>2003-09-28 AP - Statistics translatable
    	</ul>
	<li>V0.9.3 Devel
  	<ul>
		<li>2003-09-26 HS - Handle Primary Key comments correctly.
		<li>2003-09-24 AP - rule condition fix
		<li>2003-09-26 HS - column quoting when reading pgSet
		<li>2003-09-14 AP - document-here support for pgsql7.5
		<li>2003-09-12 HS - Display and edit check constraint comments properly.
		<li>2003-09-12 HS - Display fkey comments properly.
		<li>2003-09-11 JMP - RPM packages now install pgAdmin3 icon.
		<li>2003-09-11 JMP - SRPM package should rebuild anywhere.
		<li>2003-09-10 AP - correct quoting in dlg Operator, support schema qualified merge ops.